updated the services

--- a/deployment-manifests/deployment.yaml
+++ b/deployment-manifests/deployment.yaml
@@ -35,3 +35,38 @@
         app: python-sample
       type: NodePort
 ---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: mongodb-standalone
+spec:
+  serviceName: database
+  replicas: 1
+  selector:
+    matchLabels:
+      app: database
+  template:
+    metadata:
+      labels:
+        app: database
+        selector: mongodb-standalone
+    spec:
+      containers:
+      - name: mongodb-standalone
+        image: mongo:4.0.8
+        env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: administrator
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: wvbDjPOAXRlUEqRm
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: database
+  labels:
+    app: database
+spec:
+  clusterIP: None
+  selector:
+    app: database
