--- a/deployment-manifests/mongodb.yaml
+++ b/deployment-manifests/mongodb.yaml
@@ -7,7 +7,7 @@ kind: Deployment
 metadata:
   labels:
     name: mongo
-  name: mongo-controller
+  name: mongo
 spec:
   #serviceName: database
   replicas: 1
@@ -18,7 +18,7 @@ spec:
     metadata:
       labels:
         name: mongo
-      name: mongo-controller
+      name: mongo
     spec:
       containers:
       - name: mongo
