--- a/deployment-manifests/deployment.yaml
+++ b/deployment-manifests/deployment.yaml
@@ -1,3 +1,10 @@
+ ---
+ kind: template
+ apiVersion: v1
+ metadata:
+    name: python-task-service
+objects:
+-
  apiVersion: apps/v1
     kind: Deployment
     metadata:
@@ -18,7 +25,7 @@
             name: python-sample
             ports:
             - containerPort: 3333
----
+-
     apiVersion: v1
     kind: Service
     metadata:
